# Stellar_Lending_Protocol

./: .gitignore  ARCHITECTURE.md  COMPLETE_STRUCTURE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  RESTRUCTURING_COMPLETE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: ci.yml
contracts/configuration/AddressStorage/: Cargo.toml
contracts/configuration/AddressStorage/src/: lib.rs
contracts/configuration/LendingPoolAddressesProvider/: Cargo.toml
contracts/configuration/LendingPoolAddressesProvider/src/: lib.rs
contracts/configuration/LendingPoolParametersProvider/: Cargo.toml
contracts/configuration/LendingPoolParametersProvider/src/: lib.rs
contracts/configuration/UintStorage/: Cargo.toml
contracts/configuration/UintStorage/src/: lib.rs
contracts/fees/FeeProvider/: Cargo.toml
contracts/fees/TokenDistributor/: Cargo.toml
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/lendingpool/DefaultReserveInterestRateStrategy/: Cargo.toml
contracts/lendingpool/LendingPool/: Cargo.toml
contracts/lendingpool/LendingPoolConfigurator/: Cargo.toml
contracts/lendingpool/LendingPoolCore/: Cargo.toml
contracts/lendingpool/LendingPoolDataProvider/: Cargo.toml
contracts/lendingpool/LendingPoolLiquidationManager/: Cargo.toml
contracts/libraries/CoreLibrary/: Cargo.toml
contracts/libraries/StellarAddressLib/: Cargo.toml
contracts/libraries/WadRayMath/: Cargo.toml
contracts/misc/ChainlinkProxyPriceProvider/: Cargo.toml
contracts/misc/WalletBalanceProvider/: Cargo.toml
contracts/mocks/FlashLoanReceiver/: Cargo.toml
contracts/oracles/LendingRateOracle/: Cargo.toml
contracts/oracles/PriceOracle/: Cargo.toml
contracts/tokenization/SToken/: Cargo.toml
scripts/: deploy.sh
tests/scenarios/: deposit_borrow_repay.json  liquidation.json
(+21 files in other folders)
